cta spacing  fix

--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,7 @@ textarea {
   line-height: 1;
   font-style: italic;
 
-  margin: 0 0 41px 0;
+  margin: 0 0 39px 0;
   position: relative;
   padding: 12px 0 0 50px;
 }
@@ -123,7 +123,7 @@ textarea {
   letter-spacing: 3.6px;
   line-height: 0.52;
   border: 2px solid #eaa258;
-  padding: 26px 72px;
+  padding: 28px 72px;
   margin-bottom: 29px;
 }
 
